@@ -1,3 +1,13 @@
+2002-09-26  Deepa Natarajan  <deepa.natarajan@wipro.com>
+
+	* monitor.c: Set remove list in the Monitor Options window to
+	remember the logs it is monitoring. Fixes bug# 89485.
+
+2002-09-25  Deepa Natarajan <deepa.natarajan@wipro.com>
+
+	* logview.c: Add an option to collapse all the trees.
+	Fixes bug# 89482.
+
 2002-09-06  Glynn Foster  <glynn.foster@sun.com>
 
 	* logview.c: Remove conflict for menu accelerators. Also get
